resolved some sonar issues